[Save Balance SnapShot Controller] - Made it Return Previous,Current and Delta for Context
